sample/error/e02404.asn
E02404 DEFINITIONS ::=
BEGIN
    Int ::= INTEGER
    Seq ::= SEQUENCE {
        COMPONENTS OF Int   -- E02404
    }
END
